[gd_scene load_steps=14 format=3 uid="uid://d4ae4w5gc3rla"]

[ext_resource type="Texture2D" uid="uid://by4yxkc1g838b" path="res://images/bg2.jpg" id="1_background"]
[ext_resource type="Script" path="res://scripts/content.gd" id="1_content"]
[ext_resource type="Texture2D" uid="uid://em3rhvyk7rdw" path="res://images/frame1.PNG" id="3_frame1"]
[ext_resource type="Texture2D" uid="uid://kqqi7a8ube6a" path="res://images/frame2.png" id="4_frame2"]
[ext_resource type="Texture2D" uid="uid://cq5dp1ba47b4y" path="res://images/frame3.png" id="5_frame3"]
[ext_resource type="Texture2D" uid="uid://sm7fx34gr2dm" path="res://images/set-bg.png" id="7_panel_bg"]
[ext_resource type="Texture2D" uid="uid://b7on6xb5u2tj7" path="res://images/close.png" id="8_button"]
[ext_resource type="Texture2D" uid="uid://j3bd8udq4ovp" path="res://images/music-logo.png" id="9_music"]
[ext_resource type="Texture2D" uid="uid://devbaeftpryak" path="res://images/back.png" id="back_texture"]
[ext_resource type="Texture2D" uid="uid://dj1ofw31e0w86" path="res://images/set.png" id="set_texture"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slider"]
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.3, 0.1, 0.1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grabber_area"]
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.9, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grabber_area_highlight"]
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.9, 0.2, 0.2, 1)

[node name="Content" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_content")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_background")

[node name="Chapter1" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -590.0
offset_top = -196.0
offset_right = -212.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_frame1")
ignore_texture_size = true
stretch_mode = 5

[node name="Chapter2" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -495.0
offset_top = 34.0
offset_right = -104.0
offset_bottom = 422.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_frame2")
ignore_texture_size = true
stretch_mode = 5

[node name="Chapter3" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 114.0
offset_top = -70.0
offset_right = 470.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_frame3")
ignore_texture_size = true
stretch_mode = 5

[node name="BackButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 80.0
texture_normal = ExtResource("back_texture")
ignore_texture_size = true
stretch_mode = 5

[node name="StoryText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SetButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0
texture_normal = ExtResource("set_texture")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -573.0
offset_top = -324.0
offset_right = 580.0
offset_bottom = 327.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_panel_bg")

[node name="CloseButton" type="TextureButton" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -968.0
offset_top = 63.0
offset_right = 17.0
offset_bottom = 603.0
grow_horizontal = 0
texture_normal = ExtResource("8_button")

[node name="VolumeControl" type="HBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -483.0
offset_top = -65.0
offset_right = 417.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicLogo" type="TextureRect" parent="SettingsPanel/VolumeControl"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("9_music")
expand_mode = 1
stretch_mode = 5

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel/VolumeControl"]
custom_minimum_size = Vector2(800, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_slider")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_grabber_area")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_grabber_area_highlight")
